2003-05-05  Brian Warner  <warner@lothar.com>

	* setup.py (setup_args): s/licence/license/, preferred in python-2.3

2003-05-05  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.5rc1.

	* .: Releasing Twisted 1.0.5rc2 (only a Debian build problem fixed).

2003-05-05  Brian Warner  <warner@lothar.com>

	* twisted/trial/reporter.py: remove ResultTypes, it doesn't really
	accomplish its goal

	* twisted/trial/unittest.py: move log.startKeepingErrors() from
	top-level to TestSuite.run(). This fixes the problem of errors
	being eaten by code which imports unittest for other reasons (like
	to use trial.remote reporting)

2003-05-04  Brian Warner  <warner@lothar.com>

	* twisted/trial/reporter.py (ResultTypes): export legal values for
	Reporter.reportResults() so remote reporters know what to expect

2003-05-03  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/tcp.py, twisted/internet/ssl.py: TLS support
	added to TCP connections; startTLS() method added to transport
	objects to switch from unencrypted to encrypted mode.

2003-05-02  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/protocol.py: Added continueTrying attribute to
	ReconnectingClientFactory, and increased the number of states where
	stopTrying() will actually stop further connection attempts.

2003-05-01  Brian Warner  <warner@lothar.com>

	* twisted/test/test_trial.py: handle new trial layout
	* twisted/trial/runner.py (runTest): utility function to help
	test_trial
	* twisted/trial/util.py (extract_tb): handle new trial layout,
	ignore the right framework functions.

2003-05-01  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* twisted/python/context.py: call-stack context tree.

	* twisted/python/components.py: support interface-to-interface
	adapatation, IFoo(o) syntax for adaptation, context-based
	registries and more.

	* twisted/python/log.py: Totally rewritten logging system.

2003-05-01  Brian Warner  <warner@lothar.com>
