@@ -26,6 +26,9 @@ Be verbose, but do not attempt to use colors (more log-file friendly)
 \fB-j\fR, \fB--jelly\fR
 Report results in a machine-readable jelly stream.
 .TP
+\fB--timing\fR
+Report results with timing information for each test.
+.TP
 \fB-m\fR, \fB--module\fR <module>
 Module containing test cases.
 .TP
